@@ -1,3 +1,8 @@
+2006-07-06  Jakub Steiner <jimmac@ximian.com>
+
+	* 48x48/emblems/emblem-symbolic-link: removed the old style link
+		(is a scalable now).
+	
 2006-07-06  Rodney Dawes  <dobey@novell.com>
 
 	* scalable/places/Makefile.am:
